# ChangeLog for app-misc/cldx-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  06 Apr 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> cldx-meta-10.4.ebuild:
  Added net-news/liferea

*cldx-meta-10.4 (05 Apr 2010)

  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cldx-meta-10.4.ebuild:
  Bump version.

  02 Apr 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cldx-meta-10.3.91.ebuild:
  Added x11-apps/xmessage

  30 Mar 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cldx-meta-10.3.91.ebuild:
  Remove x11-apps/ccsm

  30 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  cldx-meta-10.3.91.ebuild:
  Add x11-misc/ktsuss to 10.3.91.

  29 Mar 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  cldx-meta-10.3.91.ebuild:
  Added x11-plugins/pidgin-facebookchat, x11-plugins/pidgin-hotkeys, net-p2p/linuxdcpp, www-plugins/xclear-mozilla-plugin and removed x11-wm/compiz-fusion, x11-apps/fusion-icon, x11-wm/emerald, x11-themes/emerald-themes.

  28 Mar 2010; Трацевский Александр <alex@gentoo.org>
  cldx-meta-10.0.ebuild, cldx-meta-10.0.1.ebuild, cldx-meta-10.2-r1.ebuild,
  cldx-meta-10.3.91.ebuild:
  Corrected package name xfce-extra/xfce4-notifyd.

  02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  cldx-meta-10.0.ebuild:
  Add app-editors/mousepad.

  30 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  cldx-meta-10.0.ebuild:
  Added x11-terms/terminal.

  23 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cldx-meta-10.0.ebuild,+metadata.xml:
  Meta package for CLDX.