@@ -3,5 +3,6 @@ EBUILD cldx-meta-10.0.ebuild 2413 RMD160 7ac5ffb53055fc8c33dd1bc9df75469521d4217
 EBUILD cldx-meta-10.2-r1.ebuild 2752 RMD160 ae8dbb3123f51dd3b84a36b95600d195dd58a804 SHA1 72ba786b815e01dc8c0891507e7eb9aac795b294 SHA256 a772024c2b8749d8d4c7e5f48f574efa1df6354fb227e47e3ee2c64c7916b0a1
 EBUILD cldx-meta-10.3.91.ebuild 2802 RMD160 e702b218f8d7973bbca740b8175f575a37b86d8c SHA1 773ebd8c788d476a486e1e133903581ea99bb819 SHA256 0f353afbee3309e0df5bbfb9f1a915ee36ea2766ba4e474fe4186f1337e1da38
 EBUILD cldx-meta-10.4.ebuild 3166 RMD160 5eeeb5ba58acb2355dd13e7c86ede4e90f8ef5aa SHA1 6f792bbc7b567b9979e25ff04bbb8bae69ad1fd0 SHA256 d8afd390ff5b2704e30da1da682f3c01719990360728b77156f1db280869970b
-MISC ChangeLog 1639 RMD160 9fb2c81b8be79d31b02cad51ca0535d7abc2c42d SHA1 638f08832776e06432cdee3fe2d5a8436d536d5a SHA256 f7f5bf616ecef7fc3a6e34a0440550e479d1e55ebbc202a4dfa7b4eb467657af
+EBUILD cldx-meta-10.5.83.ebuild 1711 RMD160 6538722ca397a69a4546ee344324bccf0691117b SHA1 9059221183c2f61b8b5c3efa55330b6f0ecb6a04 SHA256 ed8def9e1f745ac5f00f793beee3aef66454ea7b2024f55c104bd1c8148cbaae
+MISC ChangeLog 1784 RMD160 68976559a3107386ea61dcb99b8dac46b46a5fe5 SHA1 5d0e65c4bd51ea69a9178cad7dbbbb17a983b611 SHA256 d6e478a612e5295762f0b29cf23dd2b794f8e8f6b84c5d0dacc42a4a16972f01
 MISC metadata.xml 262 RMD160 2230fae163c003c26da4221c8b25a0c7b9ed0602 SHA1 9187b064dbcca538b3d3349ac9340fd5869e7e96 SHA256 adfc7d0bbf6ccbdbe03704cb131512d2ccfd9c6f71ac5ebc7746c3539116af7e
