@@ -1,3 +1,7 @@
+~app-misc/css-meta-10.5.83 amd64 x86
+~app-misc/cls-meta-10.5.83 amd64 x86
+~app-misc/cldx-meta-10.5.83 amd64 x86
+
 =app-misc/calculate-install-gui-2.2.9999 amd64 x86
 =sys-apps/calculate-9999 amd64 x86
 =sys-apps/calculate-client-2.2.9999 amd64 x86
