@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cldx-meta-10.5.83 (08 Jun 2010)
+
+  08 Jun 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +cldx-meta-10.5.83.ebuild:
+  Version bump.
+
   06 Apr 2010; Трацевский Александр
   <atratsevskiy@gentoo.org> cldx-meta-10.4.ebuild:
   Added net-news/liferea
